# systems_catalog

./: .gitignore  Cargo.toml  README.md  agent.md  build.rs  project.json  publish  publish.ps1  systems_catalog.db  systems_catalog_export.db  systems_catalog_export_2.db  v2.db
.github/skills/phased-rust-ui-delivery/: SKILL.md
.github/skills/pixel-perfect-ui-ux/: SKILL.md
.github/workflows/: release.yml
assets/: llm_import.instructions.md  llm_import.schema.json
assets/entity_types/: step_processor.json
assets/llm_detailed_import/: instructions.md  schema.json
assets/schemas/: README.md  entity-api.schema.json  entity-base.schema.json  entity-database.schema.json  entity-service.schema.json  entity-step-processor.schema.json  entity-zone.schema.json  interaction.schema.json  project.schema.json
src/: app.rs  db.rs  file_store.rs  main.rs  models.rs  plugins.rs  project_store.rs
src/app/: actions.rs  help_text.rs  toolbar.rs  ui.rs  updater.rs
src/app/entities/: api.rs  database.rs  mod.rs  service.rs  step_processor.rs  zone.rs
