[package]
name = "systems_catalog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow", "persistence"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = "0.14"
arboard = "3.4"
egui_material_icons = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[build-dependencies]
winres = "0.1"
